# figpanel

./: .gitignore  CITATION.cff  CLAUDE.md  README.md  hf_model_card.md  pyproject.toml
examples/: demo.ipynb
examples/images/: CREDITS.md
figpanel/: __init__.py  dedup.py  detector.py  extractor.py  matcher.py  model.py  ocr.py  viz.py
tests/: test_detector.py
